--- a/chains-meta.yaml
+++ b/chains-meta.yaml
@@ -1097,3 +1097,10 @@
   chain-id: 0x92
   explorers:
     - https://sonicscan.org
+- currency:
+    name: Ozean Poseidon Testnet
+    symbol: USDX
+    decimals: 18
+  chain-id: 0x77c55a
+  explorers:
+    - https://ozonescan.org/
