--- a/chains.yaml
+++ b/chains.yaml
@@ -2495,3 +2495,20 @@ chain-settings:
           grpcId: 10134
           short-names: [ kadena-testnet ]
           chain-id: testnet
+    - id: ozean
+      label: Ozean
+      type: eth
+      settings:
+        expected-block-time: 1s
+        lags:
+          syncing: 10
+          lagging: 20
+        options:
+          validate-peers: false
+      chains:
+        - id: Ozean Poseidon Testnet
+          priority: 5
+          code: OZEAN_TESTNET
+          grpcId: 10135
+          short-names: [ ozean-testnet ]
+          chain-id: 0x77c55a
