--- a/chains.yaml
+++ b/chains.yaml
@@ -2150,7 +2150,7 @@ chain-settings:
           code: 0G_GALILEO_TESTNET
           grpcId: 10136
           short-names: [0g-galileo-testnet]
-          chain-id: 0x40d8
+          chain-id: 0x138D7
     - id: superseed
       label: Superseed
       type: eth
