--- a/chains-meta.yaml
+++ b/chains-meta.yaml
@@ -982,7 +982,11 @@
   explorers:
     - https://app.roninchain.com/
   chain-id: 2020
-- explorers:
+- currency:
+    name: ZetaChain
+    symbol: ZETA
+    decimals: 18
+  explorers:
     - https://zetachain.blockscout.com
   chain-id: 7000
 - currency:
