ban reth later v1.4.3 - eth_getLogs issues

--- a/compatible-clients.yamale.yaml
+++ b/compatible-clients.yamale.yaml
@@ -3,5 +3,5 @@ rules: list(include('rule'))
 ---
 rule:
   client: str()
-  networks: list(str())
+  networks: list(str(), required=False)
   blacklist: list(str())
