--- a/chains.yaml
+++ b/chains.yaml
@@ -2349,6 +2349,12 @@ chain-settings:
           syncing: 10
           lagging: 5
       chains:
+        - id: Mainnet
+          priority: 100
+          code: MEZO_MAINNET
+          grpcId: 10122
+          short-names: [mezo-mainnet]
+          chain-id: 0x7b7c
         - id: Testnet
           priority: 1
           code: MEZO_TESTNET
