Disable zeta validation

--- a/chains.yamale.yaml
+++ b/chains.yamale.yaml
@@ -37,6 +37,7 @@ options:
   validate-peers: bool(required=False)
   validate-syncing: bool(required=False)
   disable-liveness-subscription-validation: bool(required=False)
+  disable-log-index-validation: bool(required=False)
 
 ---
 chain:
