--- a/chains.yaml
+++ b/chains.yaml
@@ -1962,10 +1962,16 @@ chain-settings:
       chains:
         - id: Blaze Testnet
           priority: 1
-          code: SONIC_TESTNET
+          code: SONIC_BLAZE_TESTNET
           grpcId: 10103
-          short-names: [sonic-testnet, sonic-blaze-testnet]
+          short-names: [sonic-blaze-testnet]
           chain-id: 0xdede
+        - id: Testnet
+          priority: 1
+          code: SONIC_TESTNET
+          grpcId: 10140
+          short-names: [sonic-testnet]
+          chain-id: 0x3909
         - id: Mainnet
           priority: 100
           code: SONIC_MAINNET
