--- a/chains.yaml
+++ b/chains.yaml
@@ -1966,6 +1966,12 @@ chain-settings:
           grpcId: 10103
           short-names: [sonic-testnet, sonic-blaze-testnet]
           chain-id: 0xdede
+        - id: Testnet
+          priority: 1
+          code: SONIC_TESTNET_V2
+          grpcId: 10140
+          short-names: [sonic-testnet-v2]
+          chain-id: 0x3909
         - id: Mainnet
           priority: 100
           code: SONIC_MAINNET
