--- a/chains.yaml
+++ b/chains.yaml
@@ -2655,3 +2655,26 @@ chain-settings:
           grpcId: 10142
           short-names: [plasma-testnet]
           chain-id: 0x2612
+    - id: katana
+      label: Katana
+      type: eth
+      settings:
+        expected-block-time: 1s
+        lags:
+          syncing: 40
+          lagging: 20
+        options:
+          validate-peers: false
+      chains:
+        - id: Mainnet
+          priority: 100
+          code: KATANA_MAINNET
+          grpcId: 1110
+          short-names: [katana]
+          chain-id: 0xb67d2
+        - id: Testnet
+          priority: 1
+          code: KATANA_TESTNET
+          grpcId: 10143
+          short-names: [katana-testnet]
+          chain-id: 0x1f977
