--- a/chains.yaml
+++ b/chains.yaml
@@ -2202,7 +2202,7 @@ chain-settings:
           code: 0G_GALILEO_TESTNET
           grpcId: 10136
           short-names: [0g-galileo-testnet]
-          chain-id: 0x40D9
+          chain-id: 0x40da
     - id: superseed
       label: Superseed
       type: eth
